<resources>
    <string name="app_name">FirebaseApp</string>

    <string name="books">Books</string>
    <string name="games">Games</string>
    <string name="movies">Movies</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>

    <string name="not_registered">Not registered yet!</string>
    <string name="already_registered">Already registered!</string>

    <string name="your_email">Type your email</string>
    <string name="your_password">Type your password</string>
    <string name="confirm_password">Confirm your password</string>

    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="developer">Developer</string>
    <string name="director">Director</string>
    <string name="genre">Genre</string>

</resources>